k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: autocode
  labels:
    app.kubernetes.io/part-of: autocode
